--- a/ios/HomelessResourcesApp/Info.plist
+++ b/ios/HomelessResourcesApp/Info.plist
@@ -26,14 +26,15 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Show current location on map.</string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>MBXAccessToken</key>
+	<string>pk.eyJ1IjoicGF0cmlja3RyYW4wNDgiLCJhIjoiY2s4YWlhdnUyMGE3bjNrbDI1ZTVxMGV1OCJ9.rBFFbl424kOoLqUgyFScrA</string>
 </dict>
 </plist>
