--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HomelessResourcesApp",
+  "name": "homeless-resources-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,10 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/portal": "^1.0.14",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@rnmapbox/maps": "^10.1.42",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.2",
+    "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,9 +36,11 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
